content/docs/9500_python-api/9000_versions/v0.2.9/splitgraph.ingestion.csv.mdx

import "@splitgraph/design/css/sphinxtheme.css";

export const meta = {
  title: "splitgraph.ingestion.csv package",
  id: "splitgraph.ingestion.csv package"
};

<div className=" rst-content"><nav className="toc"><ol className="toc-level toc-level-1"><li className="toc-item toc-item-h2"><a className="toc-link toc-link-h2" href="#module-contents">Module contents</a></li><li className="toc-item toc-item-h2"><a className="toc-link toc-link-h2" href="#submodules">Submodules</a><ol className="toc-level toc-level-2"><li className="toc-item toc-item-h2"><a className="toc-link toc-link-h2" href="#splitgraphingestioncsvfdw-module">splitgraph.ingestion.csv.fdw module</a></li></ol></li></ol></nav><div className="section" id="module-splitgraph.ingestion.csv">
<span id="module-contents"></span><h2 id="module-contents">Module contents<a className="headerlink" href="#module-splitgraph.ingestion.csv" title="Permalink to this headline">¶</a></h2>
<dl className="py class">
<dt id="splitgraph.ingestion.csv.CSVDataSource">
<em className="property"><span className="pre">class</span> </em><code className="sig-prename descclassname"><span className="pre">splitgraph.ingestion.csv.</span></code><code className="sig-name descname"><span className="pre">CSVDataSource</span></code><span className="sig-paren">(</span><em className="sig-param"><span className="n"><span className="pre">engine</span></span><span className="p"><span className="pre">:</span></span> <span className="n"><span className="pre">PostgresEngine</span></span></em>, <em className="sig-param"><span className="n"><span className="pre">credentials</span></span><span className="p"><span className="pre">:</span></span> <span className="n"><span className="pre">Optional</span><span className="p"><span className="pre">[</span></span><span className="pre">Dict</span><span className="p"><span className="pre">[</span></span><span className="pre">str</span><span className="p"><span className="pre">,</span> </span><span className="pre">Any</span><span className="p"><span className="pre">]</span></span><span className="p"><span className="pre">]</span></span></span> <span className="o"><span className="pre">=</span></span> <span className="default_value"><span className="pre">None</span></span></em>, <em className="sig-param"><span className="n"><span className="pre">params</span></span><span className="p"><span className="pre">:</span></span> <span className="n"><span className="pre">Optional</span><span className="p"><span className="pre">[</span></span><span className="pre">Dict</span><span className="p"><span className="pre">[</span></span><span className="pre">str</span><span className="p"><span className="pre">,</span> </span><span className="pre">Any</span><span className="p"><span className="pre">]</span></span><span className="p"><span className="pre">]</span></span></span> <span className="o"><span className="pre">=</span></span> <span className="default_value"><span className="pre">None</span></span></em><span className="sig-paren">)</span><a className="headerlink" href="#splitgraph.ingestion.csv.CSVDataSource" title="Permalink to this definition">¶</a></dt>
<dd><p>Bases: <a className="reference internal" href="splitgraph.hooks.data_source/#splitgraph.hooks.data_source.fdw.ForeignDataWrapperDataSource" title="splitgraph.hooks.data_source.fdw.ForeignDataWrapperDataSource"><code className="xref py py-class docutils literal notranslate"><span className="pre">splitgraph.hooks.data_source.fdw.ForeignDataWrapperDataSource</span></code></a></p>
<dl className="py attribute">
<dt id="splitgraph.ingestion.csv.CSVDataSource.commandline_help">
<code className="sig-name descname"><span className="pre">commandline_help</span></code><em className="property"><span className="pre">:</span> <span className="pre">str</span></em><em className="property"> <span className="pre">=</span> <span className="pre">'Mount</span> <span className="pre">CSV</span> <span className="pre">files</span> <span className="pre">in</span> <span className="pre">S3/HTTP.\n\nIf</span> <span className="pre">passed</span> <span className="pre">an</span> <span className="pre">URL,</span> <span className="pre">this</span> <span className="pre">will</span> <span className="pre">live</span> <span className="pre">query</span> <span className="pre">a</span> <span className="pre">CSV</span> <span className="pre">file</span> <span className="pre">on</span> <span className="pre">an</span> <span className="pre">HTTP</span> <span className="pre">server.</span> <span className="pre">If</span> <span className="pre">passed\nS3</span> <span className="pre">access</span> <span className="pre">credentials,</span> <span className="pre">this</span> <span className="pre">will</span> <span className="pre">scan</span> <span className="pre">a</span> <span className="pre">bucket</span> <span className="pre">for</span> <span className="pre">CSV</span> <span className="pre">files,</span> <span className="pre">infer</span> <span className="pre">their</span> <span className="pre">schema\nand</span> <span className="pre">make</span> <span className="pre">them</span> <span className="pre">available</span> <span className="pre">to</span> <span className="pre">query</span> <span className="pre">over</span> <span className="pre">SQL.</span>  <span className="pre">\n\nFor</span> <span className="pre">example:</span>  <span className="pre">\n\n\x08\n```\nsgr</span> <span className="pre">mount</span> <span className="pre">csv</span> <span className="pre">target_schema</span> <span className="pre">-o@-</span> <span className="pre">&lt;&lt;EOF\n</span>  <span className="pre">&#38;lbrace;\n</span>    <span className="pre">"s3_endpoint":</span> <span className="pre">"cdn.mycompany.com:9000",\n</span>    <span className="pre">"s3_access_key":</span> <span className="pre">"ABCDEF",\n</span>    <span className="pre">"s3_secret_key":</span> <span className="pre">"GHIJKL",\n</span>    <span className="pre">"s3_bucket":</span> <span className="pre">"data",\n</span>    <span className="pre">"s3_object_prefix":</span> <span className="pre">"csv_files/current/",\n</span>    <span className="pre">"autodetect_header":</span> <span className="pre">true,\n</span>    <span className="pre">"autodetect_dialect":</span> <span className="pre">true\n</span>  <span className="pre">&#38;rbrace;\nEOF\n```\n'</span></em><a className="headerlink" href="#splitgraph.ingestion.csv.CSVDataSource.commandline_help" title="Permalink to this definition">¶</a></dt>
<dd></dd></dl>

<dl className="py attribute">
<dt id="splitgraph.ingestion.csv.CSVDataSource.commandline_kwargs_help">
<code className="sig-name descname"><span className="pre">commandline_kwargs_help</span></code><em className="property"><span className="pre">:</span> <span className="pre">str</span></em><em className="property"> <span className="pre">=</span> <span className="pre">'s3_access_key:\ns3_secret_key:\ntables:</span> <span className="pre">Tables</span> <span className="pre">to</span> <span className="pre">mount</span> <span className="pre">(default</span> <span className="pre">all).</span> <span className="pre">If</span> <span className="pre">a</span> <span className="pre">list,</span> <span className="pre">will</span> <span className="pre">import</span> <span className="pre">only</span> <span className="pre">these</span> <span className="pre">tables.</span> <span className="pre">\nIf</span> <span className="pre">a</span> <span className="pre">dictionary,</span> <span className="pre">must</span> <span className="pre">have</span> <span className="pre">the</span> <span className="pre">format\n</span>    <span className="pre">&#38;lbrace;"table_name":</span> <span className="pre">&#38;lbrace;"schema":</span> <span className="pre">&#38;lbrace;"col_1":</span> <span className="pre">"type_1",</span> <span className="pre">...&#38;rbrace;,\n</span>                    <span className="pre">"options":</span> <span className="pre">&#38;lbrace;[get</span> <span className="pre">passed</span> <span className="pre">to</span> <span className="pre">CREATE</span> <span className="pre">FOREIGN</span> <span className="pre">TABLE]&#38;rbrace;&#38;rbrace;&#38;rbrace;.\nurl:</span> <span className="pre">HTTP</span> <span className="pre">URL</span> <span className="pre">to</span> <span className="pre">the</span> <span className="pre">CSV</span> <span className="pre">file.\ns3_endpoint:</span> <span className="pre">S3</span> <span className="pre">endpoint</span> <span className="pre">(including</span> <span className="pre">port</span> <span className="pre">if</span> <span className="pre">required).\ns3_region:</span> <span className="pre">Region</span> <span className="pre">of</span> <span className="pre">the</span> <span className="pre">S3</span> <span className="pre">bucket.\ns3_secure:</span> <span className="pre">Whether</span> <span className="pre">to</span> <span className="pre">use</span> <span className="pre">HTTPS</span> <span className="pre">for</span> <span className="pre">S3</span> <span className="pre">access.\ns3_bucket:</span> <span className="pre">Bucket</span> <span className="pre">the</span> <span className="pre">object</span> <span className="pre">is</span> <span className="pre">in.\ns3_object_prefix:</span> <span className="pre">Prefix</span> <span className="pre">for</span> <span className="pre">object</span> <span className="pre">in</span> <span className="pre">S3</span> <span className="pre">bucket.\nautodetect_header:</span> <span className="pre">Detect</span> <span className="pre">whether</span> <span className="pre">the</span> <span className="pre">CSV</span> <span className="pre">file</span> <span className="pre">has</span> <span className="pre">a</span> <span className="pre">header</span> <span className="pre">automatically.\nautodetect_dialect:</span> <span className="pre">Detect</span> <span className="pre">the</span> <span className="pre">CSV</span> <span className="pre">file\'s</span> <span className="pre">dialect</span> <span className="pre">(separator,</span> <span className="pre">quoting</span> <span className="pre">characters</span> <span className="pre">etc)</span> <span className="pre">automatically.\nheader:</span> <span className="pre">First</span> <span className="pre">line</span> <span className="pre">of</span> <span className="pre">the</span> <span className="pre">CSV</span> <span className="pre">file</span> <span className="pre">is</span> <span className="pre">its</span> <span className="pre">header.\nseparator:</span> <span className="pre">Character</span> <span className="pre">used</span> <span className="pre">to</span> <span className="pre">separate</span> <span className="pre">fields</span> <span className="pre">in</span> <span className="pre">the</span> <span className="pre">file.\nquotechar:</span> <span className="pre">Character</span> <span className="pre">used</span> <span className="pre">to</span> <span className="pre">quote</span> <span className="pre">fields.'</span></em><a className="headerlink" href="#splitgraph.ingestion.csv.CSVDataSource.commandline_kwargs_help" title="Permalink to this definition">¶</a></dt>
<dd></dd></dl>

<dl className="py attribute">
<dt id="splitgraph.ingestion.csv.CSVDataSource.credentials_schema">
<code className="sig-name descname"><span className="pre">credentials_schema</span></code><em className="property"><span className="pre">:</span> <span className="pre">Dict</span><span className="p"><span className="pre">[</span></span><span className="pre">str</span><span className="p"><span className="pre">,</span> </span><span className="pre">Any</span><span className="p"><span className="pre">]</span></span></em><em className="property"> <span className="pre">=</span> <span className="pre">&#38;lbrace;'properties':</span> <span className="pre">&#38;lbrace;'s3_access_key':</span> <span className="pre">&#38;lbrace;'type':</span> <span className="pre">'string'&#38;rbrace;,</span> <span className="pre">'s3_secret_key':</span> <span className="pre">&#38;lbrace;'type':</span> <span className="pre">'string'&#38;rbrace;&#38;rbrace;,</span> <span className="pre">'type':</span> <span className="pre">'object'&#38;rbrace;</span></em><a className="headerlink" href="#splitgraph.ingestion.csv.CSVDataSource.credentials_schema" title="Permalink to this definition">¶</a></dt>
<dd></dd></dl>

<dl className="py method">
<dt id="splitgraph.ingestion.csv.CSVDataSource.from_commandline">
<em className="property"><span className="pre">classmethod</span> </em><code className="sig-name descname"><span className="pre">from_commandline</span></code><span className="sig-paren">(</span><em className="sig-param"><span className="n"><span className="pre">engine</span></span></em>, <em className="sig-param"><span className="n"><span className="pre">commandline_kwargs</span></span></em><span className="sig-paren">)</span> → <a className="reference internal" href="#splitgraph.ingestion.csv.CSVDataSource" title="splitgraph.ingestion.csv.CSVDataSource"><span className="pre">splitgraph.ingestion.csv.CSVDataSource</span></a><a className="headerlink" href="#splitgraph.ingestion.csv.CSVDataSource.from_commandline" title="Permalink to this definition">¶</a></dt>
<dd><p>Instantiate an FDW data source from commandline arguments.</p>
</dd></dl>

<dl className="py method">
<dt id="splitgraph.ingestion.csv.CSVDataSource.get_description">
<em className="property"><span className="pre">classmethod</span> </em><code className="sig-name descname"><span className="pre">get_description</span></code><span className="sig-paren">(</span><span className="sig-paren">)</span> → <span className="pre">str</span><a className="headerlink" href="#splitgraph.ingestion.csv.CSVDataSource.get_description" title="Permalink to this definition">¶</a></dt>
<dd></dd></dl>

<dl className="py method">
<dt id="splitgraph.ingestion.csv.CSVDataSource.get_fdw_name">
<code className="sig-name descname"><span className="pre">get_fdw_name</span></code><span className="sig-paren">(</span><span className="sig-paren">)</span><a className="headerlink" href="#splitgraph.ingestion.csv.CSVDataSource.get_fdw_name" title="Permalink to this definition">¶</a></dt>
<dd></dd></dl>

<dl className="py method">
<dt id="splitgraph.ingestion.csv.CSVDataSource.get_name">
<em className="property"><span className="pre">classmethod</span> </em><code className="sig-name descname"><span className="pre">get_name</span></code><span className="sig-paren">(</span><span className="sig-paren">)</span> → <span className="pre">str</span><a className="headerlink" href="#splitgraph.ingestion.csv.CSVDataSource.get_name" title="Permalink to this definition">¶</a></dt>
<dd></dd></dl>

<dl className="py method">
<dt id="splitgraph.ingestion.csv.CSVDataSource.get_remote_schema_name">
<code className="sig-name descname"><span className="pre">get_remote_schema_name</span></code><span className="sig-paren">(</span><span className="sig-paren">)</span> → <span className="pre">str</span><a className="headerlink" href="#splitgraph.ingestion.csv.CSVDataSource.get_remote_schema_name" title="Permalink to this definition">¶</a></dt>
<dd><p>Override this if the FDW supports IMPORT FOREIGN SCHEMA</p>
</dd></dl>

<dl className="py method">
<dt id="splitgraph.ingestion.csv.CSVDataSource.get_server_options">
<code className="sig-name descname"><span className="pre">get_server_options</span></code><span className="sig-paren">(</span><span className="sig-paren">)</span><a className="headerlink" href="#splitgraph.ingestion.csv.CSVDataSource.get_server_options" title="Permalink to this definition">¶</a></dt>
<dd></dd></dl>

<dl className="py method">
<dt id="splitgraph.ingestion.csv.CSVDataSource.get_table_options">
<code className="sig-name descname"><span className="pre">get_table_options</span></code><span className="sig-paren">(</span><em className="sig-param"><span className="n"><span className="pre">table_name</span></span><span className="p"><span className="pre">:</span></span> <span className="n"><span className="pre">str</span></span></em><span className="sig-paren">)</span> → <span className="pre">Mapping</span><span className="p"><span className="pre">[</span></span><span className="pre">str</span><span className="p"><span className="pre">,</span> </span><span className="pre">str</span><span className="p"><span className="pre">]</span></span><a className="headerlink" href="#splitgraph.ingestion.csv.CSVDataSource.get_table_options" title="Permalink to this definition">¶</a></dt>
<dd></dd></dl>

<dl className="py attribute">
<dt id="splitgraph.ingestion.csv.CSVDataSource.params_schema">
<code className="sig-name descname"><span className="pre">params_schema</span></code><em className="property"><span className="pre">:</span> <span className="pre">Dict</span><span className="p"><span className="pre">[</span></span><span className="pre">str</span><span className="p"><span className="pre">,</span> </span><span className="pre">Any</span><span className="p"><span className="pre">]</span></span></em><em className="property"> <span className="pre">=</span> <span className="pre">&#38;lbrace;'properties':</span> <span className="pre">&#38;lbrace;'autodetect_dialect':</span> <span className="pre">&#38;lbrace;'description':</span> <span className="pre">"Detect</span> <span className="pre">the</span> <span className="pre">CSV</span> <span className="pre">file's</span> <span className="pre">dialect</span> <span className="pre">(separator,</span> <span className="pre">quoting</span> <span className="pre">characters</span> <span className="pre">etc)</span> <span className="pre">automatically",</span> <span className="pre">'type':</span> <span className="pre">'boolean'&#38;rbrace;,</span> <span className="pre">'autodetect_header':</span> <span className="pre">&#38;lbrace;'description':</span> <span className="pre">'Detect</span> <span className="pre">whether</span> <span className="pre">the</span> <span className="pre">CSV</span> <span className="pre">file</span> <span className="pre">has</span> <span className="pre">a</span> <span className="pre">header</span> <span className="pre">automatically',</span> <span className="pre">'type':</span> <span className="pre">'boolean'&#38;rbrace;,</span> <span className="pre">'header':</span> <span className="pre">&#38;lbrace;'description':</span> <span className="pre">'First</span> <span className="pre">line</span> <span className="pre">of</span> <span className="pre">the</span> <span className="pre">CSV</span> <span className="pre">file</span> <span className="pre">is</span> <span className="pre">its</span> <span className="pre">header',</span> <span className="pre">'type':</span> <span className="pre">'boolean'&#38;rbrace;,</span> <span className="pre">'quotechar':</span> <span className="pre">&#38;lbrace;'description':</span> <span className="pre">'Character</span> <span className="pre">used</span> <span className="pre">to</span> <span className="pre">quote</span> <span className="pre">fields',</span> <span className="pre">'type':</span> <span className="pre">'string'&#38;rbrace;,</span> <span className="pre">'s3_bucket':</span> <span className="pre">&#38;lbrace;'description':</span> <span className="pre">'Bucket</span> <span className="pre">the</span> <span className="pre">object</span> <span className="pre">is</span> <span className="pre">in',</span> <span className="pre">'type':</span> <span className="pre">'string'&#38;rbrace;,</span> <span className="pre">'s3_endpoint':</span> <span className="pre">&#38;lbrace;'description':</span> <span className="pre">'S3</span> <span className="pre">endpoint</span> <span className="pre">(including</span> <span className="pre">port</span> <span className="pre">if</span> <span className="pre">required)',</span> <span className="pre">'type':</span> <span className="pre">'string'&#38;rbrace;,</span> <span className="pre">'s3_object_prefix':</span> <span className="pre">&#38;lbrace;'description':</span> <span className="pre">'Prefix</span> <span className="pre">for</span> <span className="pre">object</span> <span className="pre">in</span> <span className="pre">S3</span> <span className="pre">bucket',</span> <span className="pre">'type':</span> <span className="pre">'string'&#38;rbrace;,</span> <span className="pre">'s3_region':</span> <span className="pre">&#38;lbrace;'description':</span> <span className="pre">'Region</span> <span className="pre">of</span> <span className="pre">the</span> <span className="pre">S3</span> <span className="pre">bucket',</span> <span className="pre">'type':</span> <span className="pre">'string'&#38;rbrace;,</span> <span className="pre">'s3_secure':</span> <span className="pre">&#38;lbrace;'description':</span> <span className="pre">'Whether</span> <span className="pre">to</span> <span className="pre">use</span> <span className="pre">HTTPS</span> <span className="pre">for</span> <span className="pre">S3</span> <span className="pre">access',</span> <span className="pre">'type':</span> <span className="pre">'boolean'&#38;rbrace;,</span> <span className="pre">'separator':</span> <span className="pre">&#38;lbrace;'description':</span> <span className="pre">'Character</span> <span className="pre">used</span> <span className="pre">to</span> <span className="pre">separate</span> <span className="pre">fields</span> <span className="pre">in</span> <span className="pre">the</span> <span className="pre">file',</span> <span className="pre">'type':</span> <span className="pre">'string'&#38;rbrace;,</span> <span className="pre">'tables':</span> <span className="pre">&#38;lbrace;'additionalProperties':</span> <span className="pre">&#38;lbrace;'options':</span> <span className="pre">&#38;lbrace;'additionalProperties':</span> <span className="pre">&#38;lbrace;'type':</span> <span className="pre">'string'&#38;rbrace;,</span> <span className="pre">'type':</span> <span className="pre">'object'&#38;rbrace;&#38;rbrace;,</span> <span className="pre">'type':</span> <span className="pre">'object'&#38;rbrace;,</span> <span className="pre">'url':</span> <span className="pre">&#38;lbrace;'description':</span> <span className="pre">'HTTP</span> <span className="pre">URL</span> <span className="pre">to</span> <span className="pre">the</span> <span className="pre">CSV</span> <span className="pre">file',</span> <span className="pre">'type':</span> <span className="pre">'string'&#38;rbrace;&#38;rbrace;,</span> <span className="pre">'type':</span> <span className="pre">'object'&#38;rbrace;</span></em><a className="headerlink" href="#splitgraph.ingestion.csv.CSVDataSource.params_schema" title="Permalink to this definition">¶</a></dt>
<dd></dd></dl>

<dl className="py attribute">
<dt id="splitgraph.ingestion.csv.CSVDataSource.supports_load">
<code className="sig-name descname"><span className="pre">supports_load</span></code><em className="property"> <span className="pre">=</span> <span className="pre">True</span></em><a className="headerlink" href="#splitgraph.ingestion.csv.CSVDataSource.supports_load" title="Permalink to this definition">¶</a></dt>
<dd></dd></dl>

<dl className="py attribute">
<dt id="splitgraph.ingestion.csv.CSVDataSource.supports_mount">
<code className="sig-name descname"><span className="pre">supports_mount</span></code><em className="property"> <span className="pre">=</span> <span className="pre">True</span></em><a className="headerlink" href="#splitgraph.ingestion.csv.CSVDataSource.supports_mount" title="Permalink to this definition">¶</a></dt>
<dd></dd></dl>

<dl className="py attribute">
<dt id="splitgraph.ingestion.csv.CSVDataSource.supports_sync">
<code className="sig-name descname"><span className="pre">supports_sync</span></code><em className="property"> <span className="pre">=</span> <span className="pre">False</span></em><a className="headerlink" href="#splitgraph.ingestion.csv.CSVDataSource.supports_sync" title="Permalink to this definition">¶</a></dt>
<dd></dd></dl>

</dd></dl>

<dl className="py class">
<dt id="splitgraph.ingestion.csv.CSVIngestionAdapter">
<em className="property"><span className="pre">class</span> </em><code className="sig-prename descclassname"><span className="pre">splitgraph.ingestion.csv.</span></code><code className="sig-name descname"><span className="pre">CSVIngestionAdapter</span></code><a className="headerlink" href="#splitgraph.ingestion.csv.CSVIngestionAdapter" title="Permalink to this definition">¶</a></dt>
<dd><p>Bases: <a className="reference internal" href="splitgraph.ingestion/#splitgraph.ingestion.common.IngestionAdapter" title="splitgraph.ingestion.common.IngestionAdapter"><code className="xref py py-class docutils literal notranslate"><span className="pre">splitgraph.ingestion.common.IngestionAdapter</span></code></a></p>
<dl className="py method">
<dt id="splitgraph.ingestion.csv.CSVIngestionAdapter.create_ingestion_table">
<em className="property"><span className="pre">static</span> </em><code className="sig-name descname"><span className="pre">create_ingestion_table</span></code><span className="sig-paren">(</span><em className="sig-param"><span className="n"><span className="pre">data</span></span></em>, <em className="sig-param"><span className="n"><span className="pre">engine</span></span></em>, <em className="sig-param"><span className="n"><span className="pre">schema</span></span><span className="p"><span className="pre">:</span></span> <span className="n"><span className="pre">str</span></span></em>, <em className="sig-param"><span className="n"><span className="pre">table</span></span><span className="p"><span className="pre">:</span></span> <span className="n"><span className="pre">str</span></span></em>, <em className="sig-param"><span className="o"><span className="pre">**</span></span><span className="n"><span className="pre">kwargs</span></span></em><span className="sig-paren">)</span><a className="headerlink" href="#splitgraph.ingestion.csv.CSVIngestionAdapter.create_ingestion_table" title="Permalink to this definition">¶</a></dt>
<dd></dd></dl>

<dl className="py method">
<dt id="splitgraph.ingestion.csv.CSVIngestionAdapter.data_to_new_table">
<em className="property"><span className="pre">static</span> </em><code className="sig-name descname"><span className="pre">data_to_new_table</span></code><span className="sig-paren">(</span><em className="sig-param"><span className="n"><span className="pre">data</span></span></em>, <em className="sig-param"><span className="n"><span className="pre">engine</span></span><span className="p"><span className="pre">:</span></span> <span className="n"><span className="pre">PsycopgEngine</span></span></em>, <em className="sig-param"><span className="n"><span className="pre">schema</span></span><span className="p"><span className="pre">:</span></span> <span className="n"><span className="pre">str</span></span></em>, <em className="sig-param"><span className="n"><span className="pre">table</span></span><span className="p"><span className="pre">:</span></span> <span className="n"><span className="pre">str</span></span></em>, <em className="sig-param"><span className="n"><span className="pre">no_header</span></span><span className="p"><span className="pre">:</span></span> <span className="n"><span className="pre">bool</span></span> <span className="o"><span className="pre">=</span></span> <span className="default_value"><span className="pre">True</span></span></em>, <em className="sig-param"><span className="o"><span className="pre">**</span></span><span className="n"><span className="pre">kwargs</span></span></em><span className="sig-paren">)</span><a className="headerlink" href="#splitgraph.ingestion.csv.CSVIngestionAdapter.data_to_new_table" title="Permalink to this definition">¶</a></dt>
<dd></dd></dl>

<dl className="py method">
<dt id="splitgraph.ingestion.csv.CSVIngestionAdapter.query_to_data">
<em className="property"><span className="pre">static</span> </em><code className="sig-name descname"><span className="pre">query_to_data</span></code><span className="sig-paren">(</span><em className="sig-param"><span className="n"><span className="pre">engine</span></span></em>, <em className="sig-param"><span className="n"><span className="pre">query</span></span><span className="p"><span className="pre">:</span></span> <span className="n"><span className="pre">str</span></span></em>, <em className="sig-param"><span className="n"><span className="pre">schema</span></span><span className="p"><span className="pre">:</span></span> <span className="n"><span className="pre">Optional</span><span className="p"><span className="pre">[</span></span><span className="pre">str</span><span className="p"><span className="pre">]</span></span></span> <span className="o"><span className="pre">=</span></span> <span className="default_value"><span className="pre">None</span></span></em>, <em className="sig-param"><span className="o"><span className="pre">**</span></span><span className="n"><span className="pre">kwargs</span></span></em><span className="sig-paren">)</span><a className="headerlink" href="#splitgraph.ingestion.csv.CSVIngestionAdapter.query_to_data" title="Permalink to this definition">¶</a></dt>
<dd></dd></dl>

</dd></dl>

<dl className="py function">
<dt id="splitgraph.ingestion.csv.copy_csv_buffer">
<code className="sig-prename descclassname"><span className="pre">splitgraph.ingestion.csv.</span></code><code className="sig-name descname"><span className="pre">copy_csv_buffer</span></code><span className="sig-paren">(</span><em className="sig-param"><span className="n"><span className="pre">data</span></span></em>, <em className="sig-param"><span className="n"><span className="pre">engine</span></span><span className="p"><span className="pre">:</span></span> <span className="n"><span className="pre">PsycopgEngine</span></span></em>, <em className="sig-param"><span className="n"><span className="pre">schema</span></span><span className="p"><span className="pre">:</span></span> <span className="n"><span className="pre">str</span></span></em>, <em className="sig-param"><span className="n"><span className="pre">table</span></span><span className="p"><span className="pre">:</span></span> <span className="n"><span className="pre">str</span></span></em>, <em className="sig-param"><span className="n"><span className="pre">no_header</span></span><span className="p"><span className="pre">:</span></span> <span className="n"><span className="pre">bool</span></span> <span className="o"><span className="pre">=</span></span> <span className="default_value"><span className="pre">False</span></span></em>, <em className="sig-param"><span className="o"><span className="pre">**</span></span><span className="n"><span className="pre">kwargs</span></span></em><span className="sig-paren">)</span><a className="headerlink" href="#splitgraph.ingestion.csv.copy_csv_buffer" title="Permalink to this definition">¶</a></dt>
<dd><p>Copy CSV data from a buffer into a given schema/table</p>
</dd></dl>

<dl className="py function">
<dt id="splitgraph.ingestion.csv.query_to_csv">
<code className="sig-prename descclassname"><span className="pre">splitgraph.ingestion.csv.</span></code><code className="sig-name descname"><span className="pre">query_to_csv</span></code><span className="sig-paren">(</span><em className="sig-param"><span className="n"><span className="pre">engine</span></span><span className="p"><span className="pre">:</span></span> <span className="n"><span className="pre">PsycopgEngine</span></span></em>, <em className="sig-param"><span className="n"><span className="pre">query</span></span></em>, <em className="sig-param"><span className="n"><span className="pre">buffer</span></span></em>, <em className="sig-param"><span className="n"><span className="pre">schema</span></span><span className="p"><span className="pre">:</span></span> <span className="n"><span className="pre">Optional</span><span className="p"><span className="pre">[</span></span><span className="pre">str</span><span className="p"><span className="pre">]</span></span></span> <span className="o"><span className="pre">=</span></span> <span className="default_value"><span className="pre">None</span></span></em><span className="sig-paren">)</span><a className="headerlink" href="#splitgraph.ingestion.csv.query_to_csv" title="Permalink to this definition">¶</a></dt>
<dd></dd></dl>

</div><div className="section" id="splitgraph-ingestion-csv-package">

<div className="section" id="submodules">
<h2 id="submodules">Submodules<a className="headerlink" href="#submodules" title="Permalink to this headline">¶</a></h2>
</div>
<div className="section" id="module-splitgraph.ingestion.csv.fdw">
<span id="splitgraph-ingestion-csv-fdw-module"></span><h2 id="splitgraphingestioncsvfdw-module">splitgraph.ingestion.csv.fdw module<a className="headerlink" href="#module-splitgraph.ingestion.csv.fdw" title="Permalink to this headline">¶</a></h2>
<dl className="py class">
<dt id="splitgraph.ingestion.csv.fdw.CSVForeignDataWrapper">
<em className="property"><span className="pre">class</span> </em><code className="sig-prename descclassname"><span className="pre">splitgraph.ingestion.csv.fdw.</span></code><code className="sig-name descname"><span className="pre">CSVForeignDataWrapper</span></code><span className="sig-paren">(</span><em className="sig-param"><span className="n"><span className="pre">fdw_options</span></span></em>, <em className="sig-param"><span className="n"><span className="pre">fdw_columns</span></span></em><span className="sig-paren">)</span><a className="headerlink" href="#splitgraph.ingestion.csv.fdw.CSVForeignDataWrapper" title="Permalink to this definition">¶</a></dt>
<dd><p>Bases: <code className="xref py py-class docutils literal notranslate"><span className="pre">object</span></code></p>
<p>Foreign data wrapper for CSV files stored in S3 buckets or HTTP</p>
<dl className="py method">
<dt id="splitgraph.ingestion.csv.fdw.CSVForeignDataWrapper.can_sort">
<code className="sig-name descname"><span className="pre">can_sort</span></code><span className="sig-paren">(</span><em className="sig-param"><span className="n"><span className="pre">sortkeys</span></span></em><span className="sig-paren">)</span><a className="headerlink" href="#splitgraph.ingestion.csv.fdw.CSVForeignDataWrapper.can_sort" title="Permalink to this definition">¶</a></dt>
<dd></dd></dl>

<dl className="py method">
<dt id="splitgraph.ingestion.csv.fdw.CSVForeignDataWrapper.execute">
<code className="sig-name descname"><span className="pre">execute</span></code><span className="sig-paren">(</span><em className="sig-param"><span className="n"><span className="pre">quals</span></span></em>, <em className="sig-param"><span className="n"><span className="pre">columns</span></span></em>, <em className="sig-param"><span className="n"><span className="pre">sortkeys</span></span><span className="o"><span className="pre">=</span></span><span className="default_value"><span className="pre">None</span></span></em><span className="sig-paren">)</span><a className="headerlink" href="#splitgraph.ingestion.csv.fdw.CSVForeignDataWrapper.execute" title="Permalink to this definition">¶</a></dt>
<dd><p>Main Multicorn entry point.</p>
</dd></dl>

<dl className="py method">
<dt id="splitgraph.ingestion.csv.fdw.CSVForeignDataWrapper.explain">
<code className="sig-name descname"><span className="pre">explain</span></code><span className="sig-paren">(</span><em className="sig-param"><span className="n"><span className="pre">quals</span></span></em>, <em className="sig-param"><span className="n"><span className="pre">columns</span></span></em>, <em className="sig-param"><span className="n"><span className="pre">sortkeys</span></span><span className="o"><span className="pre">=</span></span><span className="default_value"><span className="pre">None</span></span></em>, <em className="sig-param"><span className="n"><span className="pre">verbose</span></span><span className="o"><span className="pre">=</span></span><span className="default_value"><span className="pre">False</span></span></em><span className="sig-paren">)</span><a className="headerlink" href="#splitgraph.ingestion.csv.fdw.CSVForeignDataWrapper.explain" title="Permalink to this definition">¶</a></dt>
<dd></dd></dl>

<dl className="py method">
<dt id="splitgraph.ingestion.csv.fdw.CSVForeignDataWrapper.get_rel_size">
<code className="sig-name descname"><span className="pre">get_rel_size</span></code><span className="sig-paren">(</span><em className="sig-param"><span className="n"><span className="pre">quals</span></span></em>, <em className="sig-param"><span className="n"><span className="pre">columns</span></span></em><span className="sig-paren">)</span><a className="headerlink" href="#splitgraph.ingestion.csv.fdw.CSVForeignDataWrapper.get_rel_size" title="Permalink to this definition">¶</a></dt>
<dd></dd></dl>

<dl className="py method">
<dt id="splitgraph.ingestion.csv.fdw.CSVForeignDataWrapper.import_schema">
<em className="property"><span className="pre">classmethod</span> </em><code className="sig-name descname"><span className="pre">import_schema</span></code><span className="sig-paren">(</span><em className="sig-param"><span className="n"><span className="pre">schema</span></span></em>, <em className="sig-param"><span className="n"><span className="pre">srv_options</span></span></em>, <em className="sig-param"><span className="n"><span className="pre">options</span></span></em>, <em className="sig-param"><span className="n"><span className="pre">restriction_type</span></span></em>, <em className="sig-param"><span className="n"><span className="pre">restricts</span></span></em><span className="sig-paren">)</span><a className="headerlink" href="#splitgraph.ingestion.csv.fdw.CSVForeignDataWrapper.import_schema" title="Permalink to this definition">¶</a></dt>
<dd></dd></dl>

</dd></dl>

<dl className="py function">
<dt id="splitgraph.ingestion.csv.fdw.get_bool">
<code className="sig-prename descclassname"><span className="pre">splitgraph.ingestion.csv.fdw.</span></code><code className="sig-name descname"><span className="pre">get_bool</span></code><span className="sig-paren">(</span><em className="sig-param"><span className="n"><span className="pre">params</span></span><span className="p"><span className="pre">:</span></span> <span className="n"><span className="pre">Dict</span><span className="p"><span className="pre">[</span></span><span className="pre">str</span><span className="p"><span className="pre">,</span> </span><span className="pre">str</span><span className="p"><span className="pre">]</span></span></span></em>, <em className="sig-param"><span className="n"><span className="pre">key</span></span><span className="p"><span className="pre">:</span></span> <span className="n"><span className="pre">str</span></span></em>, <em className="sig-param"><span className="n"><span className="pre">default</span></span><span className="p"><span className="pre">:</span></span> <span className="n"><span className="pre">bool</span></span> <span className="o"><span className="pre">=</span></span> <span className="default_value"><span className="pre">True</span></span></em><span className="sig-paren">)</span> → <span className="pre">bool</span><a className="headerlink" href="#splitgraph.ingestion.csv.fdw.get_bool" title="Permalink to this definition">¶</a></dt>
<dd></dd></dl>

<dl className="py function">
<dt id="splitgraph.ingestion.csv.fdw.make_csv_reader">
<code className="sig-prename descclassname"><span className="pre">splitgraph.ingestion.csv.fdw.</span></code><code className="sig-name descname"><span className="pre">make_csv_reader</span></code><span className="sig-paren">(</span><em className="sig-param"><span className="n"><span className="pre">response</span></span><span className="p"><span className="pre">:</span></span> <span className="n"><span className="pre">io.IOBase</span></span></em>, <em className="sig-param"><span className="n"><span className="pre">autodetect_header</span></span><span className="p"><span className="pre">:</span></span> <span className="n"><span className="pre">bool</span></span> <span className="o"><span className="pre">=</span></span> <span className="default_value"><span className="pre">False</span></span></em>, <em className="sig-param"><span className="n"><span className="pre">autodetect_dialect</span></span><span className="p"><span className="pre">:</span></span> <span className="n"><span className="pre">bool</span></span> <span className="o"><span className="pre">=</span></span> <span className="default_value"><span className="pre">False</span></span></em>, <em className="sig-param"><span className="n"><span className="pre">delimiter</span></span><span className="p"><span className="pre">:</span></span> <span className="n"><span className="pre">str</span></span> <span className="o"><span className="pre">=</span></span> <span className="default_value"><span className="pre">','</span></span></em>, <em className="sig-param"><span className="n"><span className="pre">quotechar</span></span><span className="p"><span className="pre">:</span></span> <span className="n"><span className="pre">str</span></span> <span className="o"><span className="pre">=</span></span> <span className="default_value"><span className="pre">'"'</span></span></em>, <em className="sig-param"><span className="n"><span className="pre">header</span></span><span className="p"><span className="pre">:</span></span> <span className="n"><span className="pre">bool</span></span> <span className="o"><span className="pre">=</span></span> <span className="default_value"><span className="pre">True</span></span></em>, <em className="sig-param"><span className="n"><span className="pre">encoding</span></span><span className="p"><span className="pre">:</span></span> <span className="n"><span className="pre">str</span></span> <span className="o"><span className="pre">=</span></span> <span className="default_value"><span className="pre">'utf-8'</span></span></em><span className="sig-paren">)</span><a className="headerlink" href="#splitgraph.ingestion.csv.fdw.make_csv_reader" title="Permalink to this definition">¶</a></dt>
<dd></dd></dl>

</div>

</div>
</div>